--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,9 +10,8 @@ jobs:
       - apex/setup: 
           defaultusername: admin@blooddonor.com
       - run: 
-          name: Run your SFDX commands here
-          command: |
-            echo "You now have access to the sfdx cli and may execute commands against it. https://developer.salesforce.com/docs/atlas.en-us.sfdx_cli_reference.meta/sfdx_cli_reference/cli_reference.htm"
+          name: List Auth Connection Information
+          command: sfdx auth:list
 workflows: 
   basic-test: 
     jobs: 
